# string-literals

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml  security-audit.yml
crates/pkg1/: CHANGELOG.md  Cargo.toml  README.md
crates/pkg1/book/: book.toml  package-lock.json  package.json
crates/pkg1/src/: lib.rs
search.desc/string_literals/: string_literals-desc-0-.js
src/: lib.rs
src/string_literals/: lib.rs.html
string_literals/: all.html  index.html  macro.s.html  macro.string_arr!.html  macro.string_arr.html  macro.string_hashmap!.html  macro.string_hashmap.html  macro.string_vec.html  sidebar-items.js
