[package]
name = "string-literals"
version = "0.1.0"
authors = ["Samantha Nguyen <contact@samanthanguyen.me>"]
description = "Rust macros to more easily create String types"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76.0"
keywords = ["string", "macro"]
include = ["src", "LICENSE-APACHE", "LICENSE-MIT"]